--- a/bista_purchase/views/res_partner_views.xml
+++ b/bista_purchase/views/res_partner_views.xml
@@ -12,6 +12,9 @@
             <xpath expr="//field[@name='child_ids']//kanban//templates/t//field[@name='name']" position="after">
                 <span t-if="record.is_primary.raw_value" style="float:right;"><i class="fa fa-star" role="img" aria-label="Primary Contact" title="Primary Contact"/></span>
             </xpath>
+            <xpath expr="//field[@name='child_ids']//form//field[@name='name']" position="attributes">
+                <attribute name="string">Name</attribute>
+            </xpath>
             <xpath expr="//field[@name='child_ids']//form//field[@name='name']" position="after">
                 <field name="is_primary"/>
             </xpath>
