[FIX]Fixed the redmine issue #17132, #17123.

--- a/bista_sale_multi_ship/views/res_partner_view.xml
+++ b/bista_sale_multi_ship/views/res_partner_view.xml
@@ -2,8 +2,7 @@
 <odoo>
 
     <record id="account.res_partner_action_customer" model="ir.actions.act_window">
-            <field name="domain">[('is_multi_ship', '=',False)]
-            </field>
+            <field name="domain">[]</field>
     </record>
 
     <record id="multi_ship_contact_action" model="ir.actions.act_window">
