[IMP]Updated the logic for qty_delivered in shiping line.

--- a/bista_sale_multi_ship/views/res_partner_view.xml
+++ b/bista_sale_multi_ship/views/res_partner_view.xml
@@ -96,8 +96,8 @@
                         <group string="Personal Information">
                             <field name="multi_ship_id" invisible="1"
                                    attrs="{'readonly':[('state', '=', 'verified')]}"/>
-                            <field name="company_type"/>
-                            <field name="parent_id"/>
+                            <field name="company_type" invisible="1"/>
+                            <field name="parent_id" invisible="1"/>
                             <field name="name" required="1"
                                    attrs="{'readonly':[('state', '=', 'verified')]}"/>
                             <field name="attention" required="0"
