--- a/bista_sale_multi_ship/views/res_partner_view.xml
+++ b/bista_sale_multi_ship/views/res_partner_view.xml
@@ -5,32 +5,6 @@
             <field name="domain">[]</field>
     </record>
 
-    <record id="multi_ship_contact_action" model="ir.actions.act_window">
-        <field name="name">Shipment Contact</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">res.partner</field>
-        <field name="view_mode">tree</field>
-        <field name="context">{'default_is_multi_ship':1}</field>
-        <field name="domain">[('is_multi_ship', '=', True)]</field>
-    </record>
-
-    <record model="ir.actions.act_window.view" id="multi_ship_contact_tree">
-        <field name="sequence" eval="1"/>
-        <field name="view_mode">tree</field>
-        <field name="view_id" ref="res_partner_custom_multi_shipment_tree_view"/>
-        <field name="act_window_id" ref="multi_ship_contact_action"/>
-    </record>
-    <record model="ir.actions.act_window.view" id="multi_ship_contact_form">
-        <field name="sequence" eval="2"/>
-        <field name="view_mode">form</field>
-        <field name="view_id" ref="res_partner_custom_multi_shipment_form_view"/>
-        <field name="act_window_id" ref="multi_ship_contact_action"/>
-    </record>
-
-    <menuitem id="res_partner_multi_ship_contact_menu"
-            action="bista_sale_multi_ship.multi_ship_contact_action"
-            parent="sale.sale_order_menu"/>
-
     <!-- ('is_multi_ship', '=',False) -->
     <record id="account.res_partner_action_supplier" model="ir.actions.act_window">
             <field name="domain">[]
@@ -185,4 +159,29 @@
         </field>
     </record>
 
+    <record id="multi_ship_contact_action" model="ir.actions.act_window">
+        <field name="name">Shipment Contact</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">res.partner</field>
+        <field name="view_mode">tree</field>
+        <field name="context">{'default_is_multi_ship':1}</field>
+        <field name="domain">[('is_multi_ship', '=', True)]</field>
+    </record>
+
+    <menuitem id="res_partner_multi_ship_contact_menu"
+            action="bista_sale_multi_ship.multi_ship_contact_action"
+            parent="sale.sale_order_menu"/>
+
+    <record id="multi_ship_contact_tree" model="ir.actions.act_window.view">
+        <field name="sequence" eval="1"/>
+        <field name="view_mode">tree</field>
+        <field name="view_id" ref="res_partner_custom_multi_shipment_tree_view"/>
+        <field name="act_window_id" ref="bista_sale_multi_ship.multi_ship_contact_action"/>
+    </record>
+    <record id="multi_ship_contact_form" model="ir.actions.act_window.view">
+        <field name="sequence" eval="2"/>
+        <field name="view_mode">form</field>
+        <field name="view_id" ref="res_partner_custom_multi_shipment_form_view"/>
+        <field name="act_window_id" ref="bista_sale_multi_ship.multi_ship_contact_action"/>
+    </record>
 </odoo>
